MV source-side POC c8a: dynamic source/target lifecycle and checkpoint wiring
Activate MVs created after shard startup without destructive close/open:
DataFormatAwareEngine now stores refresh listeners in CopyOnWriteArrayList
and exposes addRefreshListener; IndexShard forwards dynamic listeners into
the live engine. MVEnginePlugin watches cluster state for source
mv_definitions and target mv_binding, then starts source upload listeners
and target hydrators idempotently. Target hydration resolves the SOURCE
index repository/UUID (state files are not under the target UUID).

Register GetMVCheckpoint directly from Guice-injected TransportService
(post-defect-19 pattern), with idempotent handler registration; remove the
NodeClient reflection hack. Register all index.mv/index.derived settings
stamped during target creation. View creation now relies on dynamic
activation instead of source close/open.

ARM evidence: 9K docs -> 3 partials -> 3 manifest-last commits -> 3 target
hydrated files. Server DFAE + MV remote tests green.