@@ -30,7 +30,6 @@ import org.opensearch.env.Environment;
 import org.opensearch.env.NodeEnvironment;
 import org.opensearch.index.IndexModule;
 import org.opensearch.index.engine.dataformat.MVWriterConfigRegistry;
-import org.opensearch.index.remote.GetMVCheckpointTransportHandler;
 import org.opensearch.index.remote.MVCheckpointService;
 import org.opensearch.index.remote.MVRefreshListenerFactory;
 import org.opensearch.index.remote.MVStateRefreshListener;
@@ -54,6 +53,7 @@ import org.opensearch.transport.client.Client;
 import org.opensearch.watcher.ResourceWatcherService;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
@@ -74,7 +74,6 @@ public class MVEnginePlugin extends Plugin implements ActionPlugin {
 
     private volatile ClusterService clusterService;
     private volatile ThreadPool threadPool;
-    private volatile TransportService transportService;
     private volatile Supplier<RepositoriesService> repositoriesServiceSupplier;
 
     /** Active target hydrators, keyed by target shard ID. */
@@ -110,7 +109,17 @@ public class MVEnginePlugin extends Plugin implements ActionPlugin {
 
     @Override
     public List<Setting<?>> getSettings() {
-        return List.of(MVTargetHydrator.HYDRATE_INTERVAL);
+        return List.of(
+            MVTargetHydrator.HYDRATE_INTERVAL,
+            // Target index settings stamped by MVViewCreation (must be registered for index creation)
+            Setting.simpleString("index.mv.descriptor", Setting.Property.IndexScope, Setting.Property.Final),
+            Setting.listSetting("index.mv.state_fields", Collections.emptyList(), s -> s, Setting.Property.IndexScope, Setting.Property.Final),
+            Setting.simpleString("index.mv.colocate_with", Setting.Property.IndexScope, Setting.Property.Final),
+            Setting.boolSetting("index.derived.enabled", false, Setting.Property.IndexScope, Setting.Property.Final),
+            Setting.simpleString("index.derived.data_format", Setting.Property.IndexScope, Setting.Property.Final),
+            Setting.simpleString("index.derived.source.name", Setting.Property.IndexScope, Setting.Property.Final),
+            Setting.boolSetting("index.mv.state_merge_enabled", false, Setting.Property.IndexScope, Setting.Property.Final)
+        );
     }
 
     @Override
@@ -140,26 +149,9 @@ public class MVEnginePlugin extends Plugin implements ActionPlugin {
         // Register the MV writer-spec compiler
         MVWriterConfigRegistry.register(MVWriterConfig::fromCustomDataToRegistrySpecs);
 
-        // ── Register GetMVCheckpoint transport handler (defect-#19 fix pattern) ──
-        // Extract TransportService from NodeClient. The handler is registered directly
-        // on TransportService.registerRequestHandler, not via ActionHandler, because
-        // the request/response types are in the server module.
-        if (client instanceof org.opensearch.transport.client.node.NodeClient nodeClient) {
-            try {
-                // NodeClient stores TransportService; access it for handler registration.
-                // The field is in AbstractClient -> settings, but TransportService is injected.
-                // Use the injected transportService from Guice. In OpenSearch, NodeClient
-                // exposes it indirectly. We use reflection as a POC escape hatch.
-                java.lang.reflect.Field tsField = org.opensearch.transport.client.node.NodeClient.class
-                    .getDeclaredField("transportService");
-                tsField.setAccessible(true);
-                TransportService ts = (TransportService) tsField.get(nodeClient);
-                this.transportService = ts;
-                GetMVCheckpointTransportHandler.register(ts);
-            } catch (Exception e) {
-                logger.warn("Failed to register GetMVCheckpoint transport handler: {}", e.getMessage());
-            }
-        }
+        // ── Transport handler registration moved to TransportMVCreateViewAction ──
+        // The handler is registered from the @Inject constructor where TransportService
+        // is available via Guice, eliminating the reflection hack.
 
         // ── Register the MV refresh listener factory ──
         // IndexShard.newEngineConfig() calls this factory for shards with mv_definitions.
@@ -206,51 +198,148 @@ public class MVEnginePlugin extends Plugin implements ActionPlugin {
 
     // ── Lifecycle listener for source cleanup + target hydration ─────────
 
+    /**
+     * Register the MV source refresh listener on a running shard.
+     * Called either at shard start (if definitions already present) or
+     * dynamically when definitions are added via cluster state update.
+     */
+    private void tryRegisterSourceRefreshListener(IndexShard indexShard, Map<String, String> mvDefs) {
+        if (MVCheckpointService.getListener(indexShard.shardId()) != null) {
+            logger.debug("MV source refresh listener already registered for shard={}", indexShard.shardId());
+            return; // idempotent
+        }
+        org.apache.lucene.search.ReferenceManager.RefreshListener mvListener =
+            MVRefreshListenerFactory.create(
+                indexShard.shardId(),
+                indexShard.shardPath().getDataPath(),
+                indexShard.indexSettings().getIndexMetadata().primaryTerm(indexShard.shardId().id()),
+                mvDefs,
+                () -> {
+                    try {
+                        return indexShard.getProcessedLocalCheckpoint();
+                    } catch (Exception e) {
+                        return -1L;
+                    }
+                }
+            );
+        if (mvListener != null) {
+            indexShard.addInternalRefreshListener(mvListener);
+            logger.info("MV source refresh listener dynamically registered for shard={}", indexShard.shardId());
+        }
+    }
+
+    private void tryStartTargetHydrator(IndexShard indexShard, Map<String, String> mvBinding) {
+        if (activeHydrators.containsKey(indexShard.shardId())) {
+            return;
+        }
+        String sourceIndex = mvBinding.get("source");
+        String mvId = mvBinding.get("mv_id");
+        if (sourceIndex == null || mvId == null) {
+            logger.warn("MV hydrator: mv_binding missing source or mv_id for shard={}", indexShard.shardId());
+            return;
+        }
+
+        TransportService ts = TransportMVCreateViewAction.getInjectedTransportService();
+        if (ts == null) {
+            logger.warn("MV hydrator: transport service not available for shard={}", indexShard.shardId());
+            return;
+        }
+
+        // State files live under the SOURCE index UUID/repository, not the target.
+        MVStateRemoteManager remoteManager = resolveRemoteManager(sourceIndex);
+        if (remoteManager == null) {
+            logger.warn("MV hydrator: no source remote manager for target={} source={}", indexShard.shardId(), sourceIndex);
+            return;
+        }
+
+        MVTargetHydrator hydrator = new MVTargetHydrator(
+            indexShard.shardId(),
+            mvId,
+            sourceIndex,
+            indexShard.shardPath().getDataPath(),
+            ts,
+            clusterService,
+            threadPool,
+            remoteManager,
+            MVTargetHydrator.HYDRATE_INTERVAL.get(indexShard.indexSettings().getSettings())
+        );
+        MVTargetHydrator existing = activeHydrators.putIfAbsent(indexShard.shardId(), hydrator);
+        if (existing == null) {
+            hydrator.start();
+            logger.info("MV hydrator started for target shard={} source={} mvId={}", indexShard.shardId(), sourceIndex, mvId);
+        } else {
+            hydrator.close();
+        }
+    }
+
     private class MVShardLifecycleListener implements IndexEventListener {
 
         @Override
         public void afterIndexShardStarted(IndexShard indexShard) {
-            // Target hydration: start hydrator for shards with mv_binding
             if (!indexShard.routingEntry().primary()) {
                 return;
             }
+
+            // ── Source-side: dynamic MV refresh listener registration ────
+            // If the source shard already has mv_definitions (e.g., view was created
+            // before this session), register the listener now.
+            // If not, add a ClusterStateListener to watch for definitions being added
+            // so we can register the listener when they appear (create-source-then-view flow).
             IndexMetadata metadata = indexShard.indexSettings().getIndexMetadata();
+            Map<String, String> mvDefs = metadata.getCustomData("mv_definitions");
+            if (mvDefs != null && !mvDefs.isEmpty()) {
+                tryRegisterSourceRefreshListener(indexShard, mvDefs);
+            } else {
+                // Watch for mv_definitions to appear via cluster state updates
+                clusterService.addListener(new org.opensearch.cluster.ClusterStateListener() {
+                    @Override
+                    public void clusterChanged(org.opensearch.cluster.ClusterChangedEvent event) {
+                        if (indexShard.state() == org.opensearch.index.shard.IndexShardState.CLOSED) {
+                            clusterService.removeListener(this);
+                            return;
+                        }
+                        IndexMetadata updatedMeta = event.state().metadata().index(indexShard.shardId().getIndex());
+                        if (updatedMeta == null) {
+                            clusterService.removeListener(this);
+                            return;
+                        }
+                        Map<String, String> defs = updatedMeta.getCustomData("mv_definitions");
+                        if (defs != null && !defs.isEmpty()) {
+                            clusterService.removeListener(this);
+                            tryRegisterSourceRefreshListener(indexShard, defs);
+                        }
+                    }
+                });
+            }
+
+            // ── Target-side: dynamic binding/hydrator registration ──
+            // Target creation happens before the atomic binding write, so the shard-start
+            // callback commonly sees no mv_binding. Watch cluster state just as the source
+            // side watches for mv_definitions.
             Map<String, String> mvBinding = metadata.getCustomData("mv_binding");
-            if (mvBinding == null || mvBinding.isEmpty()) {
-                return;
+            if (mvBinding != null && !mvBinding.isEmpty()) {
+                tryStartTargetHydrator(indexShard, mvBinding);
+            } else {
+                clusterService.addListener(new org.opensearch.cluster.ClusterStateListener() {
+                    @Override
+                    public void clusterChanged(org.opensearch.cluster.ClusterChangedEvent event) {
+                        if (indexShard.state() == org.opensearch.index.shard.IndexShardState.CLOSED) {
+                            clusterService.removeListener(this);
+                            return;
+                        }
+                        IndexMetadata updatedMeta = event.state().metadata().index(indexShard.shardId().getIndex());
+                        if (updatedMeta == null) {
+                            clusterService.removeListener(this);
+                            return;
+                        }
+                        Map<String, String> binding = updatedMeta.getCustomData("mv_binding");
+                        if (binding != null && !binding.isEmpty()) {
+                            clusterService.removeListener(this);
+                            tryStartTargetHydrator(indexShard, binding);
+                        }
+                    }
+                });
             }
-            String sourceIndex = mvBinding.get("source_index");
-            String mvId = mvBinding.get("mv_id");
-            if (sourceIndex == null || mvId == null) {
-                logger.warn("MV hydrator: mv_binding missing source_index or mv_id for shard={}", indexShard.shardId());
-                return;
-            }
-
-            if (transportService == null) {
-                logger.warn("MV hydrator: transport service not available for shard={}", indexShard.shardId());
-                return;
-            }
-
-            MVStateRemoteManager remoteManager = resolveRemoteManager(indexShard.shardId());
-            if (remoteManager == null) {
-                logger.warn("MV hydrator: no remote manager for target shard={}", indexShard.shardId());
-                return;
-            }
-
-            MVTargetHydrator hydrator = new MVTargetHydrator(
-                indexShard.shardId(),
-                mvId,
-                sourceIndex,
-                indexShard.shardPath().getDataPath(),
-                transportService,
-                clusterService,
-                threadPool,
-                remoteManager,
-                MVTargetHydrator.HYDRATE_INTERVAL.get(indexShard.indexSettings().getSettings())
-            );
-            hydrator.start();
-            activeHydrators.put(indexShard.shardId(), hydrator);
-            logger.info("MV hydrator started for target shard={} source={} mvId={}", indexShard.shardId(), sourceIndex, mvId);
         }
 
         @Override
@@ -278,6 +367,10 @@ public class MVEnginePlugin extends Plugin implements ActionPlugin {
      * Uses the FS remote store repository if configured; returns null otherwise.
      */
     private MVStateRemoteManager resolveRemoteManager(ShardId shardId) {
+        return resolveRemoteManager(shardId.getIndexName());
+    }
+
+    private MVStateRemoteManager resolveRemoteManager(String indexName) {
         Supplier<RepositoriesService> repoSupplier = this.repositoriesServiceSupplier;
         if (repoSupplier == null) {
             return null;
@@ -287,7 +380,7 @@ public class MVEnginePlugin extends Plugin implements ActionPlugin {
             if (clusterService == null) {
                 return null;
             }
-            IndexMetadata indexMetadata = clusterService.state().metadata().index(shardId.getIndex());
+            IndexMetadata indexMetadata = clusterService.state().metadata().index(indexName);
             if (indexMetadata == null) {
                 return null;
             }
@@ -309,10 +402,10 @@ public class MVEnginePlugin extends Plugin implements ActionPlugin {
                 path -> blobStoreRepo.blobStore().blobContainer(path),
                 new RemoteStorePathStrategy(PathType.FIXED),
                 basePath,
-                shardId.getIndex().getUUID()
+                indexMetadata.getIndexUUID()
             );
         } catch (Exception e) {
-            logger.warn("Failed to resolve remote manager for shard={}: {}", shardId, e.getMessage());
+            logger.warn("Failed to resolve remote manager for index={}: {}", indexName, e.getMessage());
             return null;
         }
     }
